fix  chat tabs width alignment

--- a/bigbluebutton-html5/imports/ui/newui_components/chat/styles.scss
+++ b/bigbluebutton-html5/imports/ui/newui_components/chat/styles.scss
@@ -163,6 +163,10 @@
   margin-left: var(--bars-padding);
   cursor: pointer;
   position: relative;
+
+  .shareBtnWidth {
+    width: 44px;
+  }
 }
 
 .sidebarTooltip{
@@ -239,7 +243,8 @@
   height: 44px;
 }
 .chatHeaderWrapper{
-  width: calc(350px - 68px);
+  // width: calc(350px - 68px);
+  width: 100%;
   background-color: #FFFFFF;
   border-radius: 6px;
   padding: 5px;
